[package]
name = "revstr"
version = "1.0.2"
edition = "2021"
authors = ["Audun Hammer Hovda <hammerhovda@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Simply reverses strings"
homepage = "https://github.com/audunhov/revstr"
documentation = "https://github.com/audunhov/revstr"
repository = "https://github.com/audunhov/revstr"

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
